sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:3: error: not found: value len
  var gap : Int = len
                  ^AlgCombSort:11: error: not found: value len
    while (rang+gap<len) {
                    ^